--- a/app/src/main/res/layout/single_trailer.xml
+++ b/app/src/main/res/layout/single_trailer.xml
@@ -8,7 +8,7 @@
     android:padding="0dp">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/mTrailerImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -26,12 +26,13 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:hint="Trailer title "
+        android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toEndOf="@+id/mTrailerImageView"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/mReviewsContent"
+        android:id="@+id/mTrailerType"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -39,10 +40,11 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:hint="Review Content"
+        android:hint="Trailer Type"
+        android:textSize="8sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toEndOf="@+id/mTrailerImageView"
         app:layout_constraintTop_toBottomOf="@+id/mTrailerName" />
 
     <TextView
@@ -56,7 +58,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mReviewsContent" />
+        app:layout_constraintTop_toBottomOf="@+id/mTrailerType" />
 
 
 </android.support.constraint.ConstraintLayout>
