--- a/app/src/main/res/layout/single_trailer.xml
+++ b/app/src/main/res/layout/single_trailer.xml
@@ -16,6 +16,17 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars[10]" />
 
+    <ImageView
+        android:id="@+id/mTrailerImageViewOverlay"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/mTrailerImageView"
+        app:layout_constraintEnd_toEndOf="@+id/mTrailerImageView"
+        app:layout_constraintStart_toStartOf="@+id/mTrailerImageView"
+        app:layout_constraintTop_toTopOf="@+id/mTrailerImageView"
+        app:layout_constraintVertical_bias="1.0"
+        tools:srcCompat="@tools:sample/avatars[10]" />
+
     <TextView
         android:id="@+id/mTrailerName"
         android:layout_width="0dp"
